--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <nav class="main-nav">
     <h1 class="main-nav_title">Moviescope</h1>
-    <form action="#" class="main-search_box">
+    <form action="./pages/search.html" class="main-search_box">
       <input type="text" id="search" name="search" placeholder="Search Movies/TV Shows">
       <button id="search-btn"><img src="img/search.svg" button>
     </form>
@@ -30,7 +30,6 @@
         <div class="front-image"
         style="background-image: url('https://image.tmdb.org/t/p/w342/t6HIqrRAclMCA60NsSmeqe9RmNV.jpg');">
       </div> -->
-
     </div>
 
     <div class="slide-movie-info">
@@ -45,6 +44,7 @@
     <div class="trending-movies">
       <!-- <div class="trending-movies_img" style="background-image: url('https://image.tmdb.org/t/p/w342/t6HIqrRAclMCA60NsSmeqe9RmNV.jpg');">
       </div> -->
+
 
     </div>
   </section>
@@ -65,6 +65,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="app.js"></script>
+  <!-- <script src="./js/search.js"></script> -->
 </body>
 
 </html>
