--- a/pages/details.html
+++ b/pages/details.html
@@ -7,39 +7,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/b26051f063.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../shared.css">
-  <link rel="stylesheet" href="../css/trending.css">
-  <title>Trending Movies</title>
+  <!-- <link rel="stylesheet" href="../css/trending.css"> -->
+  <link rel="stylesheet" href="../css/details.css">
+  <title>Moviescope</title>
 </head>
 
 <body>
   <nav class="main-nav">
     <h1 class="main-nav_title"><a href="../index.html">Moviescope</a></h1>
-    <form action="../pages/search.html" class="main-search_box">
+    <form action="./search.html" class="main-search_box">
       <input type="text" id="search" name="search" placeholder="Search Movies/TV Shows">
       <button id="search-btn"><img src="../img/search.svg" button>
     </form>
   </nav>
 
-  <div class="title">
-    <h1>Trending Movies</h1>
-  </div>
+  <div class="backdrop-container">
+    <div class="backdrop">
 
-  <div class="results-container">
-    <!-- <div class="result"
-      style="background-image: url('https://image.tmdb.org/t/p/w342/t6HIqrRAclMCA60NsSmeqe9RmNV.jpg');">
-    </div> -->
-  </div>
+      <div class="front-image"></div>
 
-  <div class="btn-container">
-    <button class="pages-btn" id="prev"><i class="fa-solid fa-chevron-left"></i>Prev</button>
-    <button class="pages-btn" id="next">Next<i class="fa-solid fa-chevron-right"></i></button>
+      <div class="details">
+        <div class="name"></div>
+
+        <div class="rating"></div>
+
+        <div class="overview"></div>
+
+      </div>
+
+    </div>
   </div>
 
   <footer class="main-footer">
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="../js/movies.js"></script>
+  <script src="../js/details.js"></script>
 </body>
-
-</html>
