--- a/pages/search.html
+++ b/pages/search.html
@@ -8,38 +8,31 @@
   <script src="https://kit.fontawesome.com/b26051f063.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../shared.css">
   <link rel="stylesheet" href="../css/trending.css">
-  <title>Trending Shows</title>
+  <title>Moviescope</title>
 </head>
 
 <body>
   <nav class="main-nav">
     <h1 class="main-nav_title"><a href="../index.html">Moviescope</a></h1>
-    <form action="../pages/search.html" class="main-search_box">
+    <form action="#" class="main-search_box">
       <input type="text" id="search" name="search" placeholder="Search Movies/TV Shows">
       <button id="search-btn"><img src="../img/search.svg" button>
     </form>
   </nav>
 
   <div class="title">
-    <h1>Trending Shows</h1>
+    <h1>Matching Results...</h1>
   </div>
 
   <div class="results-container">
     <!-- <div class="result"
         style="background-image: url('https://image.tmdb.org/t/p/w342/t6HIqrRAclMCA60NsSmeqe9RmNV.jpg');">
       </div> -->
-
-  </div>
-
-  <div class="btn-container">
-    <button class="pages-btn" id="prev"><i class="fa-solid fa-chevron-left"></i>Prev</button>
-    <button class="pages-btn" id="next">Next<i class="fa-solid fa-chevron-right"></i></button>
   </div>
 
   <footer class="main-footer">
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="../js/shows.js"></script>
-</body>
 
-</html>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="../js/search.js"></script>
+</body>
