--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale = 1.0, user-scalable = no">
+  <meta name="viewport"
+    content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1,width=device-width, height=device-height" />
   <script src="https://kit.fontawesome.com/b26051f063.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="shared.css">
   <link rel="stylesheet" href="./css/home.css">
+  <link rel="stylesheet" href="./css/resHome.css">
   <title>Moviescope</title>
 </head>
 
@@ -21,44 +23,46 @@
     </form>
   </nav>
 
-  <div class="back-images-container">
-    <div class="front-images-container">
+  <main>
+    <div class="back-images-container">
+      <div class="front-images-container">
 
-      <button class="img-btn" id="img-left"><i class="fa-solid fa-chevron-left"></i></button>
-      <button class="img-btn" id="img-right"><i class="fa-solid fa-chevron-right"></i></button>
-      <!-- Example Html
+        <button class="img-btn" id="img-left"><i class="fa-solid fa-chevron-left"></i></button>
+        <button class="img-btn" id="img-right"><i class="fa-solid fa-chevron-right"></i></button>
+        <!-- Example Html
         <div class="front-image"
         style="background-image: url('https://image.tmdb.org/t/p/w342/t6HIqrRAclMCA60NsSmeqe9RmNV.jpg');">
       </div> -->
+      </div>
+
+      <div class="slide-movie-info">
+        <div class="slide-movie-title"></div>
+        <div class="slide-movie-overview"></div>
+      </div>
     </div>
 
-    <div class="slide-movie-info">
-      <div class="slide-movie-title"></div>
-      <div class="slide-movie-overview"></div>
-    </div>
-  </div>
-
-  <section class="trending-movies-container">
-    <div class="trending-movies-header"><a href="./pages/trendingMovies.html">Trending Movies<i
-          class="fa-solid fa-chevron-right"></i></a></div>
-    <div class="trending-movies">
-      <!-- <div class="trending-movies_img" style="background-image: url('https://image.tmdb.org/t/p/w342/t6HIqrRAclMCA60NsSmeqe9RmNV.jpg');">
+    <section class="trending-movies-container">
+      <div class="trending-movies-header"><a href="./pages/trendingMovies.html">Trending Movies<i
+            class="fa-solid fa-chevron-right"></i></a></div>
+      <div class="trending-movies">
+        <!-- <div class="trending-movies_img" style="background-image: url('https://image.tmdb.org/t/p/w342/t6HIqrRAclMCA60NsSmeqe9RmNV.jpg');">
       </div> -->
 
 
-    </div>
-  </section>
+      </div>
+    </section>
 
-  <section class="trending-series-container">
-    <div class="trending-series-header"><a href="./pages/trendingShows.html">Trending Shows<i
-          class="fa-solid fa-chevron-right"></i></a></div>
+    <section class="trending-series-container">
+      <div class="trending-series-header"><a href="./pages/trendingShows.html">Trending Shows<i
+            class="fa-solid fa-chevron-right"></i></a></div>
 
-    <div class="trending-series">
-      <!-- <div class="trending-series_img"
+      <div class="trending-series">
+        <!-- <div class="trending-series_img"
         style="background-image: url('https://image.tmdb.org/t/p/w342/t6HIqrRAclMCA60NsSmeqe9RmNV.jpg');"></div> -->
 
-    </div>
-  </section>
+      </div>
+    </section>
+  </main>
 
   <footer class="main-footer">
   </footer>
