--- a/pages/details.html
+++ b/pages/details.html
@@ -45,7 +45,7 @@
     </div>
   </div>
 
-  <footer class="main-footer">
+  <footer class="footer">
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
