--- a/pages/trendingMovies.html
+++ b/pages/trendingMovies.html
@@ -27,22 +27,29 @@
     </nav>
   </header>
 
-  <div class="title">
-    <h1>Trending Movies</h1>
-  </div>
+  <main class="main">
 
-  <div class="results-container">
-    <!-- <div class="result"
-      style="background-image: url('https://image.tmdb.org/t/p/w342/t6HIqrRAclMCA60NsSmeqe9RmNV.jpg');">
-    </div> -->
-  </div>
+    <div class="title">
+      <h1 class="title__heading">Trending Movies</h1>
+    </div>
 
-  <div class="btn-container">
-    <button class="pages-btn" id="prev"><i class="fa-solid fa-chevron-left"></i>Prev</button>
-    <button class="pages-btn" id="next">Next<i class="fa-solid fa-chevron-right"></i></button>
-  </div>
+    <div class="results__container">
+      <!-- 
+        <div class="results__image" id="505642">
+          <a href="./pages/details.html">
+            <img src="https://image.tmdb.org/t/p/w342/sv1xJUazXeYqALzczSZ3O6nkH75.jpg">
+          </a> 
+        </div>
+      -->
+    </div>
 
-  <footer class="main-footer">
+    <div class="btn__container">
+      <button class="pages__btn" id="prev"><i class="fa-solid fa-chevron-left"></i>Prev</button>
+      <button class="pages__btn" id="next">Next<i class="fa-solid fa-chevron-right"></i></button>
+    </div>
+  </main>
+
+  <footer class="footer">
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
