--- a/pages/trendingShows.html
+++ b/pages/trendingShows.html
@@ -27,23 +27,29 @@
     </nav>
   </header>
 
-  <div class="title">
-    <h1>Trending Shows</h1>
-  </div>
+  <main class="main">
 
-  <div class="results-container">
-    <!-- <div class="result"
-        style="background-image: url('https://image.tmdb.org/t/p/w342/t6HIqrRAclMCA60NsSmeqe9RmNV.jpg');">
-      </div> -->
+    <div class="title">
+      <h1 class="title__heading">Trending Shows</h1>
+    </div>
 
-  </div>
+    <div class="results__container">
+      <!-- 
+        <div class="results__image" id="505642">
+          <a href="./pages/details.html">
+            <img src="https://image.tmdb.org/t/p/w342/sv1xJUazXeYqALzczSZ3O6nkH75.jpg">
+          </a> 
+        </div>
+      -->
+    </div>
 
-  <div class="btn-container">
-    <button class="pages-btn" id="prev"><i class="fa-solid fa-chevron-left"></i>Prev</button>
-    <button class="pages-btn" id="next">Next<i class="fa-solid fa-chevron-right"></i></button>
-  </div>
+    <div class="btn__container">
+      <button class="pages__btn" id="prev"><i class="fa-solid fa-chevron-left"></i>Prev</button>
+      <button class="pages__btn" id="next">Next<i class="fa-solid fa-chevron-right"></i></button>
+    </div>
+  </main>
 
-  <footer class="main-footer">
+  <footer class="footer">
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="../js/shows.js"></script>
