--- a/pages/search.html
+++ b/pages/search.html
@@ -27,17 +27,25 @@
     </nav>
   </header>
 
-  <div class="title">
-    <h1>Matching Results...</h1>
-  </div>
+  <main class="main">
 
-  <div class="results-container">
-    <!-- <div class="result"
-        style="background-image: url('https://image.tmdb.org/t/p/w342/t6HIqrRAclMCA60NsSmeqe9RmNV.jpg');">
-      </div> -->
-  </div>
+    <div class="title">
+      <h1 class="title__heading">Matching Results...</h1>
+    </div>
 
-  <footer class="main-footer">
+    <div class="results__container">
+      <!-- 
+        <div class="results__image" id="505642">
+          <a href="./pages/details.html">
+            <img src="https://image.tmdb.org/t/p/w342/sv1xJUazXeYqALzczSZ3O6nkH75.jpg">
+          </a> 
+        </div>
+      -->
+    </div>
+
+  </main>
+
+  <footer class="footer">
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
