--- a/pages/details.html
+++ b/pages/details.html
@@ -28,23 +28,27 @@
     </nav>
   </header>
 
-  <div class="backdrop-container">
-    <div class="backdrop">
+  <main class="main">
 
-      <div class="front-image"></div>
+    <div class="backdrop__container">
+      <div class="backdrop">
 
-      <div class="details">
-        <div class="name"></div>
+        <div class="frontImage">
+          <img class="frontImage__img">
+        </div>
 
-        <div class="rating"></div>
+        <div class="details">
+          <div class="name"></div>
 
-        <div class="overview"></div>
+          <div class="rating"></div>
 
+          <div class="overview"></div>
+
+        </div>
       </div>
 
     </div>
-  </div>
-
+  </main>
   <footer class="footer">
   </footer>
 
