--- a/pages/details.html
+++ b/pages/details.html
@@ -40,7 +40,16 @@
         <div class="details">
           <div class="name"></div>
 
-          <div class="rating"></div>
+          <div class="rating">
+
+            <span class="rating__icon">
+              <i class="fa-solid fa-star"></i>
+            </span>
+            <span class="rating__number">
+
+            </span>
+
+          </div>
 
           <div class="overview"></div>
 
