--- a/pages/details.html
+++ b/pages/details.html
@@ -30,7 +30,7 @@
 
   <main class="main">
 
-    <div class="backdrop__container">
+    <section class="backdrop__container">
       <div class="backdrop">
 
         <div class="frontImage">
@@ -56,7 +56,36 @@
         </div>
       </div>
 
-    </div>
+    </section>
+
+    <section class="videos">
+
+      <div class="Trailers__header-box">
+        <h1 class="Trailers__header">Official Trailers</h1>
+      </div>
+
+      <div class="Trailer__container">
+
+        <!-- <iframe class="video" src="https://www.youtube.com/embed/hebWYacbdvc" loading="lazy" frameborder="0"
+          allow="autoplay; encrypted-media; picture-in-picture; web-share" allowfullscreen>
+        </iframe> -->
+
+      </div>
+
+      <div class="Teasers__header-box">
+        <h1 class="Teasers__header">Official Teasers</h1>
+      </div>
+
+      <div class="Teaser__container">
+
+        <!-- <iframe class="video" src="https://www.youtube.com/embed/hebWYacbdvc" loading="lazy" frameborder="0"
+                allow="autoplay; encrypted-media; picture-in-picture; web-share" allowfullscreen>
+              </iframe> -->
+
+      </div>
+
+    </section>
+
   </main>
   <footer class="footer">
   </footer>
