--- a/pages/details.html
+++ b/pages/details.html
@@ -78,9 +78,9 @@
 
       <div class="Teaser__container">
 
-        <!-- <iframe class="video" src="https://www.youtube.com/embed/hebWYacbdvc" loading="lazy" frameborder="0"
-                allow="autoplay; encrypted-media; picture-in-picture; web-share" allowfullscreen>
-              </iframe> -->
+        <!-- <iframe src="https://www.youtube.com/embed/bT9csxkth8g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+
+        </iframe> -->
 
       </div>
 
