--- a/pages/details.html
+++ b/pages/details.html
@@ -16,9 +16,13 @@
 
   <header class="header">
     <nav class="nav">
-      <h1 class="nav__title">
-        <a href="../index.html" class="nav__link">Moviescope</a>
-      </h1>
+      <div class="title__box">
+        <a href="../index.html" class="icon__box nav__link">
+          <img class="nav__icon" src="../img/favicon-3.svg">
+          <h1 class="nav__title">Moviescope</h1>
+        </a>
+      </div>
+
       <form action="../pages/search.html" class="searchBox">
         <input type="text" class="searchBox__input" name="search" placeholder="Search Movies/TV Shows">
         <button class="searchBox__btn">
