--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
 
   <header class="header">
     <nav class="nav">
-      <div class="title__box">
-        <a href="#" class="icon__box nav__link">
-          <img class="nav__icon" src="img/favicon-3.svg">
-          <h1 class="nav__title">Moviescope</h1>
-        </a>
-      </div>
+      <a href="#" class="title__box nav__link">
+        <img class="nav__icon" src="img/favicon-3.svg">
+        <h1 class="nav__title">Moviescope</h1>
+      </a>
       <form action="./pages/search.html" class="searchBox">
         <input type="text" class="searchBox__input" name="search" placeholder="Search Movies/TV Shows">
         <button class="searchBox__btn">
