--- a/pages/trendingShows.html
+++ b/pages/trendingShows.html
@@ -15,12 +15,11 @@
 
   <header class="header">
     <nav class="nav">
-      <div class="title__box">
-        <a href="../index.html" class="icon__box nav__link">
-          <img class="nav__icon" src="../img/favicon-3.svg">
-          <h1 class="nav__title">Moviescope</h1>
-        </a>
-      </div>
+      <a href="../index.html" class="title__box nav__link">
+        <img class="nav__icon" src="../img/favicon-3.svg">
+        <h1 class="nav__title">Moviescope</h1>
+      </a>
+
       <form action="../pages/search.html" class="searchBox">
         <input type="text" class="searchBox__input" name="search" placeholder="Search Movies/TV Shows">
         <button class="searchBox__btn">
