--- a/pages/details.html
+++ b/pages/details.html
@@ -88,7 +88,31 @@
 
     </section>
 
+    <section class="Cast__section">
+
+      <div class="Cast__header-box">
+        <h1 class="Cast__header">Cast & Crew</h1>
+      </div>
+
+      <div class="Cast__container">
+
+        <!-- <div class="Cast__profile">
+
+          <div class="Cast__img-container">
+            <img src="https://image.tmdb.org/t/p/w154/nnCsJc9x3ZiG3AFyiyc3FPehppy.jpg" class="Cast__img">
+          </div>
+
+          <div class="Cast__name">Mark</div>
+
+        </div> -->
+
+      </div>
+
+
+    </section>
+
   </main>
+
   <footer class="footer">
   </footer>
 
