added person detail

--- a/pages/details.html
+++ b/pages/details.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/b26051f063.js" crossorigin="anonymous"></script>
+  <link rel="icon" type="image/x-icon" href="../img/favicon-3.svg">
   <link rel="stylesheet" href="../shared.css">
   <!-- <link rel="stylesheet" href="../css/trending.css"> -->
   <link rel="stylesheet" href="../css/details.css">
@@ -99,7 +100,9 @@
         <!-- <div class="Cast__profile">
 
           <div class="Cast__img-container">
-            <img src="https://image.tmdb.org/t/p/w154/nnCsJc9x3ZiG3AFyiyc3FPehppy.jpg" class="Cast__img">
+            <a href="./people.html">
+              <img src="https://image.tmdb.org/t/p/w154/nnCsJc9x3ZiG3AFyiyc3FPehppy.jpg" class="Cast__img">
+            </a>
           </div>
 
           <div class="Cast__name">Mark</div>
