--- a/pages/people.html
+++ b/pages/people.html
@@ -34,12 +34,11 @@
 
     <section class="people__container">
       <div class="people__img-box">
-        <img src="https://image.tmdb.org/t/p/w342/nnCsJc9x3ZiG3AFyiyc3FPehppy.jpg" class="people__img">
+        <img src="#" class="people__img">
       </div>
       <div class="people__biography-box">
         <div class="people__biography">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis ipsa aut rem vel ipsam perferendis error,
-          maiores tempora praesentium saepe nulla officia laudantium, adipisci nostrum! Quisquam aut sequi in libero.
+
         </div>
       </div>
 
@@ -51,5 +50,5 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="../js/details.js"></script>
+  <script src="../js/people.js"></script>
 </body>
