--- a/pages/details.html
+++ b/pages/details.html
@@ -114,6 +114,24 @@
 
     </section>
 
+    <section class="Recommended__section">
+
+      <div class="Recommended__header-box">
+        <h1 class="Recommended__header">Recommendations</h1>
+      </div>
+
+      <div class="Recommended__container">
+
+        <!-- <div class="Recommended__img-container">
+          <a href="./details.html">
+            <img src="https://image.tmdb.org/t/p/w342/nnCsJc9x3ZiG3AFyiyc3FPehppy.jpg" class="Recommended__img">
+          </a>
+        </div> -->
+
+      </div>
+
+    </section>
+
   </main>
 
   <footer class="footer">
