Added People's Work

--- a/pages/people.html
+++ b/pages/people.html
@@ -44,6 +44,24 @@
 
     </section>
 
+    <section class="Work__section">
+
+      <div class="Work__header-box">
+        <h1 class="Work__header">Also Worked On</h1>
+      </div>
+
+      <div class="Work__container">
+
+        <!-- <div class="Work__img-container">
+          <a href="./details.html">
+            <img src="https://image.tmdb.org/t/p/w342/nnCsJc9x3ZiG3AFyiyc3FPehppy.jpg" class="Work__img">
+          </a>
+        </div> -->
+
+      </div>
+
+    </section>
+
   </main>
 
   <footer class="footer">
