--- a/pages/details.html
+++ b/pages/details.html
@@ -55,7 +55,7 @@
 
             <div class="overview"></div>
 
-            <a class="btn__play" href="#" target="_blank">Play</a>
+            <a class="btn__play" href="watch.html" target="_blank">Watch Now</a>
           </div>
         </div>
       </section>
